# TicketManageSystem

./: CMakeLists.txt  Console.cpp  Console.h  FileTool.cpp  FileTool.h  FlightInfo.cpp  FlightInfo.h  Login.cpp  Login.h  Passenger.cpp  Passenger.h  README.md  TicketManageSystem.md  TicketManageSystem.pro  admin.cpp  admin.h  admin.ui  datastructure.h  flightInfo.txt  function.cpp  function.h  information.cpp  information.h  iofunc.cpp  iofunc.h  login.ui  main.cpp  ticketmanagesystem.cpp  ticketmanagesystem.h  ticketmanagesystem.ui  ui_admin.h  ui_login.h  ui_ticketmanagesystem.h
